@@ -13,6 +13,8 @@ For a complete change history, please see the CVS log comments.
 CHANGES - Current Version:
 --------------------------
 
+- Fixed bug: MITAB doesn't support writing DateTime type (bug 1948)
+
 - Fixed bug with the characters ",\n in the tab2tab application. (bug 
   1945)
  
@@ -929,5 +931,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.219 2008-09-23 13:45:03 aboudreault Exp $
+$Id: HISTORY.TXT,v 1.220 2008-09-26 14:40:24 aboudreault Exp $
 ------------
